--- a/movies.html
+++ b/movies.html
@@ -18,6 +18,12 @@
 
     <button class="button-margin" onclick="javascript:history.back();">Devolverse</button>
 
+
+    <footer>
+        <p>Author: Hege Refsnes<br>
+        <a href="mailto:hege@example.com">hege@example.com</a></p>
+    </footer>
+
     <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
     <script src="./index.js"></script>
 </body>
