fix email and back text button

--- a/movies.html
+++ b/movies.html
@@ -16,12 +16,12 @@
         </div>
     </div>
 
-    <button class="button-margin" onclick="javascript:history.back();">Devolverse</button>
+    <button class="button-margin" onclick="javascript:history.back();">Volver</button>
 
 
     <footer>
         <p>Author: Hege Refsnes<br>
-        <a href="mailto:hege@example.com">hege@example.com</a></p>
+        <a href="mailto:hege@example.com">algúncorreo@example.com</a></p>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
